changed the red color to FF4136 for resolving contrast issue

--- a/tabs/tab1-home/home.css
+++ b/tabs/tab1-home/home.css
@@ -52,7 +52,7 @@ hr {
 }
   
 .summary-amount.expense {
-    color: #FF4C4C; 
+    color: #FF4136; 
 }
 
 /* account overview */
